[package]
name = "gemini"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2018"
decription = "An attribute proc macro that lets a user choose a sync or async API with no overhead maintenance burden."

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features=["full", "extra-traits", "clone-impls", "visit-mut"] }
quote = "*"

[features]
default = []
sync = []
